# timestats

./: .gitignore  CHANGELOG.md  LICENSE  README.md  timestats.cabal
.github/: mergify.yml
.github/workflows/: workflow.yaml
src/Debug/: TimeStats.hs
src/Debug/TimeStats/: Internal.hs  Unsafe.hs
tests/: Main.hs
