cabal-version:      2.4
name:               timestats
version:            0.2.1

synopsis: A library for profiling time in Haskell applications
description: This library provides some utilities for instrumenting Haskell
             applications to collect time measures of various fragments of
             code. This is useful to measure wall-clock time when running a
             given piece of Haskell code. See the README for more details.

homepage:    https://github.com/tweag/timestats
bug-reports: https://github.com/tweag/timestats/issues

copyright:  2022 EURL Tweag
license:    BSD-3-Clause
author:     Facundo Domínguez
maintainer: facundo.dominguez@tweag.io

category: Profiling
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
  type:     git
  location: https://github.com/tweag/timestats

flag devel
  default:     False
  manual:      True
  description: Enable more warnings and fail compilation when warnings occur.
               Turn this flag on in CI.

library
    exposed-modules:  Debug.TimeStats
                      Debug.TimeStats.Internal
                      Debug.TimeStats.Unsafe
    build-depends:    base <5, containers, text
    hs-source-dirs:   src
    default-language: Haskell2010
    if flag(devel)
      ghc-options:      -Wall -Werror

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends: base, mtl, text, timestats
  if flag(devel)
    ghc-options: -Wall -Werror
  hs-source-dirs: tests
  default-language: Haskell2010
